--- a/src/main/resources/templates/title/titleList.html
+++ b/src/main/resources/templates/title/titleList.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>遊び</title>
+<title>タイトルリスト</title>
 <style>
 table {
   border-collapse: collapse;
@@ -12,11 +12,11 @@ table {
 .col_tel {width: 200px;}
 form {display: inline;}
 </style>
-<!-- JS読み込めてません -->
+<!-- JS読み込めていない -->
 <script type="text/javascript" th:src="@{/js/list.js}"></script>
 </head>
 <body>
-<h1>お気に入りのゲームについて</h1>
+<h1>タイトルリスト</h1>
 <table border="1">
     <tr>
         <th class="col_name">名前</th>
@@ -33,7 +33,6 @@ form {display: inline;}
     </tr>
 </table>
 <hr>
-<!-- 未完成（ファイル読み込み） -->
 <form action="/reading">
     <input type="submit" value="ファイル読み込み" />
 </form>
