--- a/src/main/resources/templates/character/characterEdit.html
+++ b/src/main/resources/templates/character/characterEdit.html
@@ -12,8 +12,9 @@
 <body>
     <div th:each="obj : ${data}">
         <h1 th:text="${obj.titleName}"></h1>
-        <form method="post" action="/create" th:object="${chara}">
+        <form method="post" action="/create" th:object="${chara}" >
         <table border="1">
+            <input type="hidden" name="id" th:value="*{id}"></input>
             <tr>
                 <th class="col_charaName">キャラクター名</th>
                 <td><input type="text" name="charaName" size="20" th:value="*{charaName}"
@@ -58,7 +59,7 @@
             </tr>
         </table>
         <hr>
-        <input type="submit" value="追　加" />
+        <input type="submit" value="変　更" />
         <input type="hidden" name="titleNo" th:value="${obj.id}">
         </form>
         <form action="javascript:void(0)" onclick="javascript:history.back()">
